# simple_youtube_downloader

./: README.md  pyproject.toml
yt_downloader/: cli.py  logger.py  main.py
