[tool.poetry]
name = "yt_downloader"
version = "0.0.1"
description = "Simple downloader video from youtube"
authors = ["Trusikhin Andrei"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.8"
pytube = "^15.0.0"

[tool.poetry.scripts]
yt_dl = "yt_downloader.main:main"